@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- The keys on parameter specifications are now validated.
+
+
 0.19     2016-11-21
 
 - Non-inlinable Specio types caused a syntax error when used with positional
